# social-force-jax

./: .gitignore  Manifest.toml  README.md  pyproject.toml
pedestrianinference/: __init__.py
pedestrianinference/density/: __init__.py  density.py  kernels.py
pedestrianinference/models/: initialisation.py
pedestrianinference/models/socialforce/: __init__.py  socialforce.py
scripts/: animated_heatmap.jl  fundamental_diagram_inference.py  run_sf.py
src/: __init__.py  animated_heatmap.jl  fundamental_diagram_inference.py  run_sf.py  social-force.py  socialforce.py  transformations.py
test/: test_socialforce.py
