[tool.poetry]
name = "social-force-diffrax"
version = "0.1.0"
description = "An implementation of a simple Social Force model in Diffrax"
authors = ["Jacobus Smit <jacobusmmsmit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.3.15"
jaxlib = "^0.3.15"
diffrax = "^0.2.0"
equinox = "^0.5.6"
black = "^22.6.0"
matplotlib = "^3.5.2"
optax = "^0.1.3"
pytest = "^7.1.2"
numpy = "^1.23.1"
numpyro = "^0.10.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
